# monorepo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  WORKSPACE  monorepo-details.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
deployments/wagga-gpu-server/: .env  README.md  nginx-site.conf  paths.py  start_api.py  start_cal.py  start_prose.py  start_tasker.py  supervisor.conf
deployments/wagga-gpu-server/cal.com/: cal-start
deployments/wagga-gpu-server/lexicon-prose/: .env  .env.greenhouse  .env.guild-of-entrepreneurs  .env.international-student-assistance  prose-start-greenhouse  prose-start-guild-of-entrepreneurs  prose-start-international-student-assistance  start-greenhouse  start-international-student-assistance
docs/: monorepo.md
libs/assistance/: pyproject.toml
libs/assistance/assistance/: _config.py  _git.py  _mailgun.py  _openai.py  _paths.py  _progression.py  _utilities.py
libs/assistance/assistance/_api/: email.py  main.py
libs/assistance/assistance/_api/routers/: stripe.py
libs/assistance/assistance/_campaign/: send.py  stats.py  tasker.py
libs/assistance/assistance/_completion/: context.py  summary.py
libs/assistance/assistance/_email/: formatter.py  reply.py
libs/assistance/assistance/_faq/: answer.py  batched_questions.py  correspondent.py  extract_questions.py  response.py  sub_questions.py  tasker.py
libs/assistance/assistance/_handlers/: custom.py  default.py
libs/assistance/assistance/_summarisation/: thread.py  with_tasks.py
libs/humancompatible/: README.md  project.json  pyproject.toml
libs/nxpoetry/: jest.config.ts  package.json  project.json
workspaces/assistance/: pyproject.toml
workspaces/assistance/assistance/: __main__.py  _cli.py  _config.py  _ctx.py  _embeddings.py  _git.py  _keys.py  _logging.py  _mailgun.py  _openai.py  _paths.py  _progression.py  _tasker.py  _types.py  _utilities.py  _version.py
workspaces/assistance/assistance/_api/: email.py  main.py  stripe.py
workspaces/assistance/assistance/_campaign/: send.py  stats.py  tasker.py
workspaces/assistance/assistance/_completion/: summary.py
workspaces/assistance/assistance/_email/: formatter.py  handler.py  reply.py  thread.py
workspaces/assistance/assistance/_faq/: answer.py  batched_questions.py  correspondent.py  extract_questions.py  response.py  sub_questions.py  tasker.py
workspaces/assistance/assistance/tests/: test_hello_world.py
workspaces/humancompatible/: pyproject.toml
workspaces/humancompatible/humancompatible/: __main__.py  _cli.py  _git.py  _propagate.py  _version.py
workspaces/magicmatching/: DevProposal.md  README.md  pyproject.toml
workspaces/magicmatching/discourse/plugins/magic-matching/: plugin.rb
workspaces/magicmatching/discourse/plugins/magic-matching/assets/javascripts/discourse/connectors/user-custom-controls/: mm-profile.hbs
workspaces/magicmatching/discourse/plugins/magic-matching/assets/javascripts/discourse/initializers/: alert.js
workspaces/magicmatching/discourse/plugins/magic-matching/config/: settings.yml
workspaces/magicmatching/discourse/plugins/magic-matching/config/locales/: client.en.yml  server.en.yml
workspaces/magicmatching/magic-matching-api/supabase/: config.toml  seed.sql
workspaces/magicmatching/magic-matching-api/supabase/functions/: import_map.json
workspaces/magicmatching/magic-matching-api/supabase/functions/_shared/: config.ts  cors.ts
workspaces/magicmatching/magic-matching-api/supabase/functions/add-person/: index.ts
workspaces/magicmatching/magic-matching-api/supabase/functions/match-people/: index.ts
workspaces/magicmatching/magic-matching-api/supabase/functions/person/: index.ts
workspaces/magicmatching/magic-matching-api/supabase/migrations/: 20230625114155_initial-database.sql
workspaces/magicmatching/magicmatching/: _version.py
