[tool.poetry]
name = "container"
version = "0.1.0"
description = ""
authors = []
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.dependencies.assistance]
path = "libs/assistance"
develop = true

[tool.poetry.dependencies.humancompatible]
path = "libs/humancompatible"
develop = true

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
