[tool.poetry]
name = "container"
version = "0.1.0"
description = ""
authors = []
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.dependencies.assistance]
path = "workspaces/assistance"
extras = ["test"]
develop = true

[tool.poetry.dependencies.humancompatible]
path = "workspaces/humancompatible"
develop = true

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
color_output = true
known_first_party = ["assistance"]

[tool.pyright]
ignore = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"

[tool.pylint.messages-control]
disable = [
  "fixme",
  "line-too-long",
  "missing-function-docstring",
  "no-name-in-module",
  "missing-class-docstring",
  "too-few-public-methods",
  "invalid-name",
  "missing-module-docstring",
  "no-member",
  "logging-fstring-interpolation",
  "unspecified-encoding",
  "bare-except",
]

[tool.pylint.design]
max-locals = 25
max-args = 8
