[tool.poetry]
name = "humancompatible"
version = "0.1.1"
description = ""
authors = []
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
hc = "humancompatible.__main__:main"

[tool.poetry.dependencies]
python = "~3.11"
typer = "*"
black = "*"
tomlkit = "*"

[tool.poetry.extras]
[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
